EPUB/Snapshot: Better approach for z-index issue
Fixes annotations not blending with text in EPUBs.

https://forums.zotero.org/discussion/124742/bug-with-theme-search-result-is-not-highlighted-in-original-theme

--- a/src/dom/common/stylesheets/annotations.scss
+++ b/src/dom/common/stylesheets/annotations.scss
@@ -6,7 +6,7 @@
 }
 
 .annotation-container {
-	z-index: 9999;
+	z-index: 2147483647;
 	pointer-events: none;
 	position: absolute;
 	inset: 0;
